--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "tailwindcss": "^1.0.0-beta.10",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
